chore: Replace sun.misc.Unsafe memory access (#32802)
* Optimized string access without sun.misc.Unsafe for JDK 26+
* Replace unsafe memory access with VarHandle for all supported Java versions